--- a/C0721G2-livestock-farm-FE/src/app/component/share/about-us/about-us.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/share/about-us/about-us.component.html
@@ -1,1 +1,34 @@
-<p>about-us works!</p>
+<main class="container-fluid mt-4" style="padding-top: 4rem">
+  <div>
+    <img src="https://cdn.bigdutchman.com/fileadmin/content/pig/banner/Schweinehaltung-pig-production-Referenzen-Big-Dutchman.jpg">
+  </div>
+  <div class="row">
+    <div class="col-md-8 m-auto justify-content-center bg-light">
+      <div class="">
+        <div class="card-body">
+          <p class=" fs-2 fw-bold text-success text-center">Hưng Thịnh Farm</p>
+          <p class="fs-5 " align="justify">
+            Hiện Hưng Thịnh Farm có hai trang trại tại tỉnh Hòa Vang - Đà Nẵng và Quế Sơn - Quảng Nam
+            với quy mô 2.400 heo nái và 12.000 heo thương phẩm. Hằng năm, Hưng Thịnh Farm cung cấp ra
+            thị trường hơn 5.000 heo hậu bị đực và cái, hơn 55.000 con heo thịt.</p>
+          <p class="fs-5" align="justify">
+            Hiện, trang trại Hưng Thịnh Farm đang ứng dụng các mô hình chăn nuôi và công nghệ hiện đại,
+            áp dụng quy trình kiểm soát nghiêm ngặt bằng phần mềm quản lý chăn nuôi từ Hà Lan, tuân thủ
+            theo các tiêu chuẩn của IFC về bảo vệ môi trường và an toàn lao động. </p>
+          <p class="fs-5" align="justify">
+            Hưng Thịnh Farm hướng đến xây dựng mô hình chăn nuôi và sản xuất bền vững, nâng cao tiêu
+            chuẩn của ngành chăn nuôi và thực phẩm, góp phần củng cố nền nông nghiệp công nghệ cao tại
+            Việt Nam
+          </p>
+          <p class="fs-5" align="justify">
+            Ngoài ra, Hưng Thịnh Farm còn xây dựng riêng một hệ thống truy xuất nguồn gốc nội bộ, bằng
+            cách ứng dụng mã QR (QR code) và các phần mềm quản lý sản xuất như ERP Oracle, Pig Vision.
+            Hệ thống cho phép truy xuất đến từng loại thức ăn, vacxin, thuốc thú y sử dụng trong suốt
+            quá trình nuôi; đảm bảo thịt heo an toàn, không chứa chất cấm và dư lượng kháng sinh.
+          </p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</main>
