--- a/C0721G2-livestock-farm-FE/src/app/component/share/home/home.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/share/home/home.component.html
@@ -1,1 +1,248 @@
-<p>home works!</p>
+<main style="padding-top: 4rem" class="container-fluid   bg-light">
+  <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"
+              aria-label="Slide 1"
+              aria-current="true"></button>
+      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"
+              class=""></button>
+      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"
+              class=""></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://cdn.bigdutchman.com/fileadmin/content/pig/banner/Schweinehaltung-pig-production-Referenzen-Big-Dutchman.jpg"
+             class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
+             aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+        <div class="container">
+          <div class="carousel-caption text-start">
+            <h1>Mô hình hiện đại.</h1>
+            <p>Hưng Thịnh farm đẫn đầu thị trường chăn nuôi với việc áp dụng những công nghệ tiên
+              tiến.</p>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="https://cdn.bigdutchman.com/fileadmin/content/pig/banner/Schweinehaltung-pig-production-Big-Dutchman.jpg"
+             class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
+             aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+        <div class="container">
+          <div class="carousel-caption text-end">
+            <h1>Chuyên cung cấp lợn giống - lợn thịt.</h1>
+            <p>Chứng nhận quy trình sản xuất chuẩn châu Âu và vệ sinh an toàn thực phẩm.</p>
+          </div>
+        </div>
+      </div>
+      <!--                <div class="carousel-item">-->
+      <!--                    <img src="https://cdn.bigdutchman.com/fileadmin/content/egg/banner/Legehennenhaltung-egg-production-Big-Dutchman.jpg"-->
+      <!--                         class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"-->
+      <!--                         aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">-->
+      <!--                    <div class="container">-->
+      <!--                        <div class="carousel-caption text-end">-->
+      <!--                            <h1>Chuyên cung cấp gà thịt và trứng.</h1>-->
+      <!--                            <p>Chứng nhận quy trình sản xuất chuẩn châu Âu và vệ sinh an toàn thực phẩm.</p>-->
+      <!--                        </div>-->
+      <!--                    </div>-->
+      <!--                </div>-->
+      <div class="carousel-item">
+        <img src="https://cdn.bigdutchman.com/fileadmin/content/egg-poultry-pig/banner/Gefluegelhaltung-Schweinehaltung-poultry-production-pig-production-Kontakt-Big-Dutchman.jpg"
+             class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
+             aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Hỗ trợ kỹ thuật.</h1>
+            <p>Hỗ trợ tư vấn quy trình chăn nuôi và các kỹ thuật cũng như công nghệ mới nhất.</p>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+  <div class="row justify-content-center bg-light">
+    <div class="col-md-10 col-lg-10 col-sm-12  mt-4">
+  <div class="card-group">
+    <div class="card card card-hover me-2 ms-2 mt-2 mb-2">
+      <img src="https://skiold.azureedge.net/cloudcache/1/b/e/0/9/1/1be091d560ecf202d43ac437567e7cd7cef522ca.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Chúc Mừng Năm Mới - Xuân Nhâm Dần</h5>
+        <p class="card-text">Tập đoàn gửi lời chúc mừng năm mới đến các đồng nghiệp tại Việt Nam</p>
+        <p class="card-text"><a class="text-success">Xem chi tiết</a></p>
+      </div>
+    </div>
+    <div class="card card card-hover me-2 ms-2 mt-2 mb-2">
+      <img src="https://skiold.azureedge.net/cloudcache/4/6/b/c/1/2/46bc1213b5563d3bdb0e4a0477042b629999802e.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+             <h5 class="card-title">Khai Trương Nhà Máy Gạo Hạnh Phúc, Việt Nam</h5>
+        <p class="card-text">Thật tự hào khi chúng tôi cùng với Tập đoàn Tân Long đã cho ra đời Nhà máy xay xát gạo Hạnh Phúc</p>
+        <p class="card-text"><a class="text-success">Xem chi tiết</a></p>
+      </div>
+    </div>
+    <div class="card card card-hover me-2 ms-2 mt-2 mb-2">
+      <img src="https://skiold.azureedge.net/cloudcache/9/4/c/d/a/d/94cdad4a8ec814d1837e556e1a5cdc2bd302d02f.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Cập Nhật Hệ Thống Quản Lý Lợn Nái</h5>
+        <p class="card-text">SKIOLD Ứng dụng quản lý lợn cho lợn nái - cho phép nhân viên quan sát trang trại 24/7 của bạn </p>
+        <p class="card-text"><a class="text-success">Xem chi tiết</a></p>
+      </div>
+    </div>
+  </div>
+  </div>
+  </div>
+
+  <div class="row justify-content-center bg-light">
+    <div class="col-md-10 col-lg-10 col-sm-12  mt-4">
+      <p class="fs-4 fw-bold text-success text-center">HỆ THỐNG TRANG TRẠI</p>
+      <div class="card-group">
+        <div class="card card-hover me-2 ms-2 mt-2 mb-2">
+          <img src="https://www.anovafarm.vn/Data/Sites/1/media/default/1.jpg" class="card-img-top"
+               alt="...">
+          <div class="card-body">
+            <h5 class="card-title text-center">Trại nái - Giống</h5>
+          </div>
+        </div>
+        <div class="card card-hover me-2 ms-2 mt-2 mb-2">
+          <img src="https://www.anovafarm.vn/Data/Sites/1/media/default/2.jpg" class="card-img-top"
+               alt="...">
+          <div class="card-body">
+            <h5 class="card-title text-center">Trại hậu bị - Thịt</h5>
+          </div>
+        </div>
+        <div class="card card-hover me-2 ms-2 mt-2 mb-2">
+          <img src="https://www.anovafarm.vn/Data/Sites/1/media/default/3-1.jpg" class="card-img-top"
+               alt="...">
+          <div class="card-body">
+            <h5 class="card-title text-center">Hệ thống Truy xuất nguồn gốc</h5>
+          </div>
+        </div>
+      </div>
+      <p class="fs-4 fw-bold text-success text-center mt-4">SẢN PHẨM</p>
+      <div class="card-group">
+        <div class="card card-hover me-2 ms-2 mt-2 mb-2">
+          <img src="https://www.anovafarm.vn/Data/Sites/1/media/trangchu/s3.png"
+               class="card-img-top border-secondary" alt="...">
+          <div class="card-body">
+            <h5 class="card-title text-center">Lợn giống bố mẹ</h5>
+          </div>
+        </div>
+        <div class="card card-hover me-2 ms-2 mt-2 mb-2">
+          <img src="https://www.anovafarm.vn/Data/Sites/1/media/trangchu/s4.png"
+               class="card-img-top border-secondary" alt="...">
+          <div class="card-body">
+            <h5 class="card-title text-center">Lợn giống con</h5>
+          </div>
+        </div>
+        <div class="card card-hover me-2 ms-2 mt-2 mb-2">
+          <img src="https://www.anovafarm.vn/Data/Sites/1/media/trangchu/s1-3.png"
+               class="card-img-top border-secondary" alt="...">
+          <div class="card-body">
+            <h5 class="card-title text-center">Lợn thịt</h5>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-4">
+        <div class="col-md-6 col-lg-6 col-sm-12">
+          <div class="card">
+            <div class="card-header text-center">
+              <span class="fs-4 fw-bold text-center mt-2 ">Chuồng trại kiểu mới</span>
+            </div>
+            <div class="card-body">
+              <p class="card-text">Cơ sở thực tiễn
+                Ngôi nhà Lợn của Tương lai cung cấp cơ sở thực tế để thảo luận và khuyến khích người
+                xem tích cực tham gia vào việc phát triển hơn nữa chăn nuôi gia súc. Có thể một số
+                thành phần của ngôi nhà ý tưởng sẽ không bao giờ được đưa ra thị trường vì đơn giản
+                là chúng không thực tế.
+                Nhưng điều này là hoàn toàn bình thường đối với một nghiên cứu khái niệm: Ý tưởng
+                xuất hiện trong đầu và được thử, phát triển thêm hoặc bị loại bỏ. Cuối cùng, điều
+                quan trọng là chúng tôi chấp nhận những thách thức mới và dẫn đầu và chúng tôi là
+                người xác định các chủ đề trong tương lai. Tham gia!</p>
+              <a href="#" class="btn btn-success">Xem chi tiết</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-6 col-sm-12">
+          <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="https://cdn.bigdutchman.com/fileadmin/_processed_/6/c/csm_Schweinehaltung-pig-production-2030-2-Big-Dutchman_eb5dc8df90.jpg"
+                     class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="https://cdn.bigdutchman.com/fileadmin/_processed_/2/7/csm_Schweinehaltung-pig-production-2030-Big-Dutchman_28599c6dc9.jpg"
+                     class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button"
+                    data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button"
+                    data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-4">
+        <div class="col-md-6 col-lg-6 col-sm-12">
+          <div class="card">
+            <div class="card-header text-center">
+              <span class="fs-4 fw-bold text-center mt-2 mb-2 ">307pro & 310pro</span>
+            </div>
+            <div class="card-body">
+
+              <p class="card-text">Máy tính khí hậu 307pro / 310pro của chúng tôi hiện cũng là máy
+                tính sản xuất! Điều này có nghĩa là bạn có thể sử dụng chúng để điều khiển, chẳng
+                hạn như hệ thống cho ăn khô Big Dutchman DryRapid của bạn với nhiều mạch cấp liệu,
+                xem mức lấp đầy của các silo của bạn, điều khiển hệ thống chiếu sáng và kiểm tra
+                lượng nước tiêu thụ.
+
+                Máy tính khí hậu 307pro và 310pro kiểm soát hoàn toàn khí hậu chuồng trại của bạn
+                bằng các phương pháp hiện đại nhất. Nhiệt độ trong chuồng được điều chỉnh nhanh
+                chóng và chính xác đến mức yêu cầu. Các thông số kiểm soát liên tục
+                được điều chỉnh phù
+                hợp với tình hình hiện tại trong chuồng dựa trên một chức năng tự học mới.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-6 col-sm-12">
+          <div id="carouselExampleControl" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="https://cdn.bigdutchman.com/fileadmin/_processed_/f/d/csm_Schweinehaltung-Pig-production-310pro-Display-2-en-Big-Dutchman_01c37d996e.jpg"
+                     class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="https://cdn.bigdutchman.com/fileadmin/_processed_/6/2/csm_Schweinehaltung-Pig-production-310pro-Big-Dutchman_60e174bb6a.jpg"
+                     class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button"
+                    data-bs-target="#carouselExampleControl" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button"
+                    data-bs-target="#carouselExampleControl" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+</main>
