--- a/C0721G2-livestock-farm-FE/src/app/app.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/app.component.html
@@ -1,1 +1,5 @@
+<div class="container-fluid">
+<app-header></app-header>
 <router-outlet>Welcome C0721G2</router-outlet>
+<app-footer></app-footer>
+</div>
