--- a/C0721G2-livestock-farm-FE/src/app/component/share/footer/footer.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/share/footer/footer.component.html
@@ -1,1 +1,38 @@
-<p>footer works!</p>
+<div class="container-fluid" style="background-color: snow">
+  <div class="container text-center text-md-left">
+    <div class="row">
+      <div class="col-md-12 " align="justify">
+        <hr>
+      </div>
+      <div class="col-md-5  col-sm-12 mr-auto my-md-4 my-0 mt-4 mb-1" align="justify">
+        <div class="text-success">
+          <img src="https://fv9-2.failiem.lv/thumb_show.php?i=jp53m5a92&view" width="120px">
+          <p>Cung cấp lợn sạch chất lượng cao - Giá cả hợp lý.</p>
+          <p>Cung cấp lợn giống chất lượng cao.</p>
+          <p>Tư vấn chăm sóc và qui trình nuôi khi mua lợn giống.</p>
+        </div>
+      </div>
+      <div class="col-md-5 col-sm-12 mr-auto my-md-4 my-0 mt-4" align="justify">
+        <div class="text-success">
+          <h5 class="fw-bolder ">Liên hệ</h5>
+          <p>Địa chỉ: Thôn An Ngãi Tây 3 - Hòa Sơn - Tp. Đà Nẵng.</p>
+          <p>Email: trangtraihungthinh@gmail.com.</p>
+          <p>Sdt: 0918456230.</p>
+        </div>
+      </div>
+      <div class="col-md-2 col-sm-12 mr-auto my-md-4 my-0 mt-4" align="justify">
+        <div class="text-success text-center">
+          <h5 class="fw-bolder mb-4">Kênh</h5>
+          <span><img src="https://cdn-icons-png.flaticon.com/512/1312/1312139.png"
+                     height="40px"></span>
+
+          <span><img src="https://cdn-icons-png.flaticon.com/512/906/906382.png"
+                     height="40px"></span>
+          <span><img src="https://cdn-icons-png.flaticon.com/512/185/185983.png"
+                     height="40px"></span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
