--- a/C0721G2-livestock-farm-FE/src/app/component/cages/cages-list/cages-list.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/cages/cages-list/cages-list.component.html
@@ -1,1 +1,115 @@
-<p>cages-list works!</p>
+<div class="container ">
+  <div class="row pt-2">
+    <div class="col-12">
+      <div class="card">
+        <div class="container ">
+          <h1 class="d-flex justify-content-center pt-3 text-success m-4">Danh sách chuồng nuôi
+          </h1>
+          <div class="row pt-2 m-4">
+            <div class=" ">
+              <div class=" fw-bold float-start">
+                <button class="btn  btn-success  ">
+                  Tạo chuồng
+                </button>
+              </div>
+
+              <form (ngSubmit)="onSubmit()" #myNgForm="ngForm"
+                    class="d-flex  float-end col-md-7  col-lg-7 fw-bold px-2">
+
+                <div class="col-md-9  col-lg-9 fw-bold px-2 ">
+
+                  <input [(ngModel)]="searchCage" class="form-control " id="name"
+                         type="text"
+                         name="customerName"
+                         placeholder=" Tên Nhân Viên - Ngày Tạo Chuồng - Loại Chuồng">
+
+                </div>
+                <div class="col-md-3 ms-sm-auto col-lg-3  ">
+                  <div class="float-end">
+                    <input class="btn btn-success  " type="submit"
+                           value="Tìm kiếm">
+                  </div>
+                </div>
+              </form>
+
+            </div>
+          </div>
+
+          <div class="">
+            <div class="mt-3  table-responsive{-sm|-md|-lg|-xl|-xxl}">
+
+              <table class="table table-striped table-hover container-fluid">
+                <thead class="text-white bg-success">
+                <tr class=" text-start">
+                  <th>Mã Chuồng Nuôi</th>
+                  <th>Mã Nhân Viên</th>
+                  <th>Họ Và Tên</th>
+                  <th>Ngày Tạo Chuồng</th>
+                  <th>Ngày Đóng Chuồng</th>
+                  <th>Loại chuồng</th>
+                  <th>Số Lượng Cá Thể</th>
+                  <th colspan="2">Chỉnh sửa/Xóa</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr *ngFor="let cage of cages">
+                  <td>{{cage.id}}</td>
+                  <td>{{cage.employee.id}}</td>
+                  <td>{{cage.employee.name}}</td>
+                  <td>{{cage.openDate}}</td>
+                  <td>{{cage.closeDate}}</td>
+                  <td>{{cage.typeOfCage.name}}</td>
+                  <td>{{cage.quantily}}</td>
+                  <td class="text-center">
+                    <button class="btn btn-sm btn-danger me-2" >Xóa</button>
+                    <button class="btn btn-sm btn-success" >Sửa</button>
+                  <td>
+                </tr>
+                </tbody>
+
+              </table>
+            </div>
+            <div class="me-5 pe-4 ">
+              <ul class="pagination pagination-sm justify-content-end  pagination-lg" style="margin:20px 0">
+
+                <div *ngIf="this.page >0 then previous"></div>
+                <ng-template #previous>
+                  <li class="page-item">
+                    <button
+                      (click)="previousClick(1)" class="page-link" type="button">Trang trước
+                    </button>
+                  </li>
+                </ng-template>
+                <li class="page-item">
+
+                  <input class="page-link" type="number" value="1" min="1" [max]="totalPages"
+                         placeholder="{{totalPages}}" aria-label="Username" [value]="page + 1"
+                         aria-describedby="basic-addon1"
+                         (change)="findPaginnation($event.target.value)">
+
+
+                </li>
+                <li class="page-item ">
+
+                  <span class="input-group-text page-link">{{page + 1}}/{{totalPages}}</span>
+
+                </li>
+
+                <div *ngIf="this.page  < this.totalPages-1 then nexts "></div>
+                <ng-template #nexts>
+                  <li class="page-item">
+                    <button (click)="nextClick(1)" class="page-link" type="button">Trang sau</button>
+                  </li>
+                </ng-template>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+<!--        </section>-->
