--- a/C0721G2-livestock-farm-FE/src/app/component/individual/individual-edit/individual-edit.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/individual/individual-edit/individual-edit.component.html
@@ -80,24 +80,27 @@
             <div class="col-md-6 position-relative">
               <label for="weight" class="form-label">Cân nặng/Kg<span
                 style="color: red">(*)</span></label>
-              <input type="number" id="weight" class="form-control" value="100" placeholder="Kg">
-              <small class="fst-italic" style="color: red">Cân nặng không được để trống</small>
-              <small class="fst-italic" style="color: red">không được là số âm, chỉ được nhập
-                số</small>
+              <input type="number" id="weight" class="form-control" value="100" placeholder="Kg"
+                     formControlName="weight">
+              <small class="fst-italic" style="color: red"
+                     *ngIf="individualForm.controls.weight.dirty &&individualForm.controls.weight.hasError('required')">
+                Cân nặng không được để trống</small>
+              <small class="fst-italic" style="color: red"
+                     *ngIf="individualForm.controls.weight.dirty &&individualForm.controls.weight.hasError('required')">
+                không được là số âm, chỉ được nhập số</small>
             </div>
 
             <!--            <div class="col-md-12 position-relative">-->
-            <!--              <label for="note" class="form-label">Ghi chú</label>-->
+            <!--              <label fozr="note" class="form-label">Ghi chú</label>-->
             <!--              <textarea type="text" class="form-control" id="note"></textarea>-->
-            <!--            </div>-->
             <div class="modal-footer col-12">
               <div class="btn-toolbar mb-3 d-flex flex-row-reverse bd-highlight" role="toolbar"
                    aria-label="Toolbar with button groups">
                 <div class="me-2 float-right">
                   <button class="btn btn-secondary customBtn" type="button" (click)="Reset()" data-dismiss="modal">Hủy
                   </button>
-                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModaledit2">Chỉnh
-                    sửa
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModaledit2"
+                          (click)="onSubmit()">Chỉnh sửa
                   </button>
                 </div>
               </div>
